{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 63,
  "lineage": "144aacfe-ee60-ed22-7d0f-82981654c808",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-043500dd4bef9abc0",
            "domain": "vpc",
            "id": "eipalloc-043500dd4bef9abc0",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-247-103-132.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.247.103.132",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT Gateway"
            },
            "tags_all": {
              "Name": "NAT Gateway"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:746669210359:internet-gateway/igw-0e26ead25ccbac7e8",
            "id": "igw-0e26ead25ccbac7e8",
            "owner_id": "746669210359",
            "tags": {
              "Name": "NSITF Prod IGW"
            },
            "tags_all": {
              "Name": "NSITF Prod IGW"
            },
            "vpc_id": "vpc-08930d10fca9394f7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-043500dd4bef9abc0",
            "association_id": "eipassoc-09a7703536823e2d7",
            "connectivity_type": "public",
            "id": "nat-048aa4a1ef0fcdc98",
            "network_interface_id": "eni-03f21bcff147023d2",
            "private_ip": "10.116.26.156",
            "public_ip": "54.247.103.132",
            "subnet_id": "subnet-057989f1e8dcdb7e4",
            "tags": {
              "Name": "vpc-nat-gateway"
            },
            "tags_all": {
              "Name": "vpc-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.ngw_eip",
            "aws_internet_gateway.igw",
            "aws_vpc.vpc",
            "module.production.module.subnets.module.public.aws_subnet.subnet",
            "module.production.module.subnets.module.public.data.aws_region.current_region"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:746669210359:vpc/vpc-08930d10fca9394f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.116.0.0/16",
            "default_network_acl_id": "acl-03849699c7b9dbece",
            "default_route_table_id": "rtb-0ddc50f095a635b3d",
            "default_security_group_id": "sg-04a59e9bdd5a3da9d",
            "dhcp_options_id": "dopt-0f0979173d9b58092",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08930d10fca9394f7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ddc50f095a635b3d",
            "owner_id": "746669210359",
            "tags": {
              "Name": "NSITF Prod VPC"
            },
            "tags_all": {
              "Name": "NSITF Prod VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.production.module.ec2.module.prod_services",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:746669210359:loadbalancer/app/prod-services-lb/c21198d9d6e97fa9",
            "arn_suffix": "app/prod-services-lb/c21198d9d6e97fa9",
            "desync_mitigation_mode": "defensive",
            "dns_name": "prod-services-lb-190146198.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:746669210359:loadbalancer/app/prod-services-lb/c21198d9d6e97fa9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod-services-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09801f90b32d7ea32"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-057989f1e8dcdb7e4"
              },
              {
                "subnet_id": "subnet-0878df2a2a89984d9"
              }
            ],
            "subnets": [
              "subnet-057989f1e8dcdb7e4",
              "subnet-0878df2a2a89984d9"
            ],
            "tags": {
              "Environment": "prod"
            },
            "tags_all": {
              "Environment": "prod"
            },
            "vpc_id": "vpc-08930d10fca9394f7",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_eip.ngw_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_vpc.vpc",
            "module.production.module.ec2.module.prod_services.module.lb_security_group.aws_security_group.sg",
            "module.production.module.subnets.module.private.aws_subnet.subnet",
            "module.production.module.subnets.module.private.data.aws_region.current_region",
            "module.production.module.subnets.module.private_rt.aws_route.ipv4_route",
            "module.production.module.subnets.module.private_rt.aws_route_table.route_table",
            "module.production.module.subnets.module.private_rt.aws_route_table_association.subnets",
            "module.production.module.subnets.module.public.aws_subnet.subnet",
            "module.production.module.subnets.module.public.data.aws_region.current_region",
            "module.production.module.subnets.module.public_rt.aws_route.ipv4_route",
            "module.production.module.subnets.module.public_rt.aws_route_table.route_table",
            "module.production.module.subnets.module.public_rt.aws_route_table_association.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.production.module.ec2.module.prod_services",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:746669210359:listener/app/prod-services-lb/c21198d9d6e97fa9/b3227d4434501aaa",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:746669210359:listener/app/prod-services-lb/c21198d9d6e97fa9/b3227d4434501aaa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:746669210359:loadbalancer/app/prod-services-lb/c21198d9d6e97fa9",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Environment": "prod"
            },
            "tags_all": {
              "Environment": "prod"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ngw_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_vpc.vpc",
            "module.production.module.ec2.module.prod_services.aws_lb.lb",
            "module.production.module.ec2.module.prod_services.module.lb_security_group.aws_security_group.sg",
            "module.production.module.subnets.module.private.aws_subnet.subnet",
            "module.production.module.subnets.module.private.data.aws_region.current_region",
            "module.production.module.subnets.module.private_rt.aws_route.ipv4_route",
            "module.production.module.subnets.module.private_rt.aws_route_table.route_table",
            "module.production.module.subnets.module.private_rt.aws_route_table_association.subnets",
            "module.production.module.subnets.module.public.aws_subnet.subnet",
            "module.production.module.subnets.module.public.data.aws_region.current_region",
            "module.production.module.subnets.module.public_rt.aws_route.ipv4_route",
            "module.production.module.subnets.module.public_rt.aws_route_table.route_table",
            "module.production.module.subnets.module.public_rt.aws_route_table_association.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.production.module.ec2.module.prod_services.module.lb_security_group[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:746669210359:security-group/sg-09801f90b32d7ea32",
            "description": "Allow public web traffic on HTTP/HTTPS to ECS Dev Frontend Web App",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09801f90b32d7ea32",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http traffic from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "prod-services-lb-sg",
            "name_prefix": "",
            "owner_id": "746669210359",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "prod-services-lb-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-services-lb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08930d10fca9394f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ngw_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_vpc.vpc",
            "module.production.module.subnets.module.private.aws_subnet.subnet",
            "module.production.module.subnets.module.private.data.aws_region.current_region",
            "module.production.module.subnets.module.private_rt.aws_route.ipv4_route",
            "module.production.module.subnets.module.private_rt.aws_route_table.route_table",
            "module.production.module.subnets.module.private_rt.aws_route_table_association.subnets",
            "module.production.module.subnets.module.public.aws_subnet.subnet",
            "module.production.module.subnets.module.public.data.aws_region.current_region",
            "module.production.module.subnets.module.public_rt.aws_route.ipv4_route",
            "module.production.module.subnets.module.public_rt.aws_route_table.route_table",
            "module.production.module.subnets.module.public_rt.aws_route_table_association.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.production.module.ecs.module.ensitf_express_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:746669210359:security-group/sg-0a73a5526bc120b8e",
            "description": "managed with terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a73a5526bc120b8e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.116.0.0/16"
                ],
                "description": "Allow connections from local",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ensitf-express-production-sg",
            "name_prefix": "",
            "owner_id": "746669210359",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "ensitf-express-production-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ensitf-express-production-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08930d10fca9394f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.production.module.ecs.module.ensitf_express_svc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nlb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.production.module.ecs.module.ensitf_express_svc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:746669210359:targetgroup/prod-ensitf-express/663fc3b786fe75f7",
            "arn_suffix": "targetgroup/prod-ensitf-express/663fc3b786fe75f7",
            "connection_termination": false,
            "deregistration_delay": "100",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-400",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:746669210359:targetgroup/prod-ensitf-express/663fc3b786fe75f7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prod-ensitf-express",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08930d10fca9394f7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.production.module.ecs.module.ensitf_optima_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:746669210359:security-group/sg-00f2c5b775bc08435",
            "description": "managed with terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f2c5b775bc08435",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.116.0.0/16"
                ],
                "description": "Allow connections from local",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ensitf-optima-production-sg",
            "name_prefix": "",
            "owner_id": "746669210359",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "ensitf-optima-production-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ensitf-optima-production-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08930d10fca9394f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.production.module.ecs.module.ensitf_optima_svc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nlb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.production.module.ecs.module.ensitf_optima_svc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:746669210359:targetgroup/prod-ensitf-optima/fb8ec0911b5b83fa",
            "arn_suffix": "targetgroup/prod-ensitf-optima/fb8ec0911b5b83fa",
            "connection_termination": false,
            "deregistration_delay": "100",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-400",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:746669210359:targetgroup/prod-ensitf-optima/fb8ec0911b5b83fa",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prod-ensitf-optima",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08930d10fca9394f7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.production.module.ensitf_production_db_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:746669210359:security-group/sg-085a19fb80159afe0",
            "description": "managed with terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085a19fb80159afe0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow connections from public temp",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.116.0.0/16"
                ],
                "description": "Allow connections from local",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "ensitf-db",
            "name_prefix": "",
            "owner_id": "746669210359",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "ensitf-db"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ensitf-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-08930d10fca9394f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.production.module.subnets.module.private",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.116.28.0/22:private_subnets",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:746669210359:subnet/subnet-012bc53c619d92744",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.116.28.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012bc53c619d92744",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "746669210359",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "ensitf-production-private-sn-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ensitf-production-private-sn-1"
            },
            "vpc_id": "vpc-08930d10fca9394f7"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "module.production.module.subnets.module.private.data.aws_region.current_region"
          ]
        },
        {
          "index_key": "10.116.32.0/22:private_subnets",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:746669210359:subnet/subnet-00c7b3fb8acb6c76c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.116.32.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c7b3fb8acb6c76c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "746669210359",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "ensitf-production-private-sn-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ensitf-production-private-sn-2"
            },
            "vpc_id": "vpc-08930d10fca9394f7"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "module.production.module.subnets.module.private.data.aws_region.current_region"
          ]
        }
      ]
    },
    {
      "module": "module.production.module.subnets.module.private_rt",
      "mode": "managed",
      "type": "aws_route",
      "name": "ipv4_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "route1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-077d5b292c6fd91291080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-048aa4a1ef0fcdc98",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-077d5b292c6fd9129",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ngw_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_vpc.vpc",
            "module.production.module.subnets.module.private_rt.aws_route_table.route_table",
            "module.production.module.subnets.module.public.aws_subnet.subnet",
            "module.production.module.subnets.module.public.data.aws_region.current_region"
          ]
        }
      ]
    },
    {
      "module": "module.production.module.subnets.module.private_rt",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:746669210359:route-table/rtb-077d5b292c6fd9129",
            "id": "rtb-077d5b292c6fd9129",
            "owner_id": "746669210359",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "ensitf-production-route-table-private"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ensitf-production-route-table-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-08930d10fca9394f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.production.module.subnets.module.private_rt",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06245baffa0999622",
            "route_table_id": "rtb-077d5b292c6fd9129",
            "subnet_id": "subnet-012bc53c619d92744"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "module.production.module.subnets.module.private.aws_subnet.subnet",
            "module.production.module.subnets.module.private.data.aws_region.current_region",
            "module.production.module.subnets.module.private_rt.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03123350c79980775",
            "route_table_id": "rtb-077d5b292c6fd9129",
            "subnet_id": "subnet-00c7b3fb8acb6c76c"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "module.production.module.subnets.module.private.aws_subnet.subnet",
            "module.production.module.subnets.module.private.data.aws_region.current_region",
            "module.production.module.subnets.module.private_rt.aws_route_table.route_table"
          ]
        }
      ]
    },
    {
      "module": "module.production.module.subnets.module.public",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.116.20.0/22:public_subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:746669210359:subnet/subnet-0878df2a2a89984d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.116.20.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0878df2a2a89984d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "746669210359",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "ensitf-production-public-sn-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ensitf-production-public-sn-1"
            },
            "vpc_id": "vpc-08930d10fca9394f7"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "module.production.module.subnets.module.public.data.aws_region.current_region"
          ]
        },
        {
          "index_key": "10.116.24.0/22:public_subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:746669210359:subnet/subnet-057989f1e8dcdb7e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.116.24.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057989f1e8dcdb7e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "746669210359",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "ensitf-production-public-sn-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ensitf-production-public-sn-2"
            },
            "vpc_id": "vpc-08930d10fca9394f7"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "module.production.module.subnets.module.public.data.aws_region.current_region"
          ]
        }
      ]
    },
    {
      "module": "module.production.module.subnets.module.public_rt",
      "mode": "managed",
      "type": "aws_route",
      "name": "ipv4_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "route1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e26ead25ccbac7e8",
            "id": "r-rtb-0e6aa553cfc3ee4191080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e6aa553cfc3ee419",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc",
            "module.production.module.subnets.module.public_rt.aws_route_table.route_table"
          ]
        }
      ]
    },
    {
      "module": "module.production.module.subnets.module.public_rt",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:746669210359:route-table/rtb-0e6aa553cfc3ee419",
            "id": "rtb-0e6aa553cfc3ee419",
            "owner_id": "746669210359",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "ensitf-production-route-table-public"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ensitf-production-route-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-08930d10fca9394f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.production.module.subnets.module.public_rt",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac5855f970447bd1",
            "route_table_id": "rtb-0e6aa553cfc3ee419",
            "subnet_id": "subnet-0878df2a2a89984d9"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "module.production.module.subnets.module.public.aws_subnet.subnet",
            "module.production.module.subnets.module.public.data.aws_region.current_region",
            "module.production.module.subnets.module.public_rt.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c616c4a59bc1f520",
            "route_table_id": "rtb-0e6aa553cfc3ee419",
            "subnet_id": "subnet-057989f1e8dcdb7e4"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "module.production.module.subnets.module.public.aws_subnet.subnet",
            "module.production.module.subnets.module.public.data.aws_region.current_region",
            "module.production.module.subnets.module.public_rt.aws_route_table.route_table"
          ]
        }
      ]
    }
  ]
}